# vidasync-multiagents-ia

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  pyproject.toml  railway.json
.github/workflows/: ci.yml
docs/: CONTRATOS_ARQUITETURA_ALVO.md  SUPABASE_DECISION.md
docs/sql/: 001_chat_judge_evaluations.sql  002_llm_judge_evaluations_supabase.sql
knowledge/: banco.json  boas_praticas_alimentares.md  materiais_estruturados.json  nutrition_faq.md  taco_catalog_full.json
scripts/: build_taco_catalog.py  ingest_nutrition_knowledge.py
src/vidasync_multiagents_ia/: __init__.py  __main__.py  config.py  graph.py  main.py  state.py
src/vidasync_multiagents_ia/agents/: __init__.py  executor.py  planner.py  retriever.py  router.py
src/vidasync_multiagents_ia/api/: debug_routes.py  dependencies.py  router.py
src/vidasync_multiagents_ia/clients/: __init__.py  open_food_facts_client.py  openai_client.py  taco_online_client.py  tbca_client.py
src/vidasync_multiagents_ia/core/: __init__.py  cache.py  circuit_breaker.py  errors.py  execution_store.py  rate_limit.py  retry.py  text.py  uploads.py
src/vidasync_multiagents_ia/observability/: __init__.py  context.py  http_logging.py  logging_setup.py  metrics.py  (+3 more)
supabase/: config.toml
supabase/migrations/: 20260227100000_init.sql  20260227100001_banking_operations.sql  20260227100002_auth.sql  20260227100003_pix_receipts.sql  20260227100004_pix_receipts_fix_types.sql  20260228100000_pix_receipt_fees.sql  20260228100001_expand_transaction_types.sql  20260228100002_cc_pix_credit_category.sql  20260228100003_add_counterparty.sql  20260302040000_onboarding_sessions.sql  20260302050000_llm_transcripts.sql  20260302060000_llm_evaluations.sql  20260302070000_transcripts_rag_contexts.sql  20260302080000_chat_metrics.sql  20260302090000_chat_metrics_v2.sql  20260303010000_transcript_evaluated.sql  20260303020000_account_credit_limit.sql  20260303030000_financial_context.sql  20260308225809_sync_pipeline_inputs_policies_from_meal_images.sql  20260312021000_water_and_nutrition_goals.sql  20260315182517_add_missing_app_tables.sql  20260325014000_notifications_schema.sql  20260325015500_notifications_constraints_alignment.sql  20260326133000_create_llm_judge_evaluations.sql  20260327014353_telemetry_supabase.sql
tests/: test_ai_router_route.py  test_ai_router_service.py  test_audio_transcricao_route.py  test_audio_transcricao_service.py  test_calorias_texto_service.py  test_chat_cadastro_refeicoes_flow_service.py  test_chat_calorias_macros_flow_service.py  test_chat_conversacional_router_service.py  test_chat_intencao_service.py  test_chat_judge_async_service.py  test_chat_judge_llm_client.py  test_chat_judge_llm_parser.py  test_chat_judge_persistence.py  test_chat_judge_prompts.py  test_chat_judge_scoring.py  test_chat_judge_service.py  test_chat_judge_supabase_repository.py  test_chat_memory_service.py  test_chat_observability_metrics.py  test_chat_orchestrator_engine.py  test_chat_orchestrator_interface.py  test_chat_plano_alimentar_multimodal_flow_service.py  test_chat_receitas_flow_service.py  test_chat_refeicao_multimodal_flow_service.py  test_chat_substituicoes_flow_service.py  test_chat_tools_executor.py  test_core_cache.py  test_core_circuit_breaker.py  test_core_execution_store.py  test_core_rate_limit.py  test_core_retry.py  test_core_uploads.py  test_foto_alimentos_route.py  test_foto_alimentos_service.py  test_foto_calorias_pipeline_teste_route.py  test_foto_calorias_pipeline_teste_service.py  test_frase_porcoes_route.py  test_frase_porcoes_service.py  test_image_reference_resolver.py  test_imagem_texto_route.py  (+48 more)
(+97 files in other folders)
