[project]
name = "vidasync-multiagents-ia"
version = "0.1.0"
description = "Multi-agent orchestrator for VidaSync with LangGraph, LangChain, and RAG"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "VidaSync Team" }
]
dependencies = [
  "fastapi>=0.116.0",
  "python-multipart>=0.0.20",
  "uvicorn[standard]>=0.35.0",
  "openai>=1.66.0",
  "pillow>=12.1.0",
  "pillow-avif-plugin>=1.5.5",
  "pydantic-settings>=2.10.0",
  "langchain>=0.3.27",
  "langgraph>=0.6.7",
  "langchain-openai>=0.3.32"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.28.0",
  "ruff>=0.12.0"
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = [
  "--cov=vidasync_multiagents_ia",
  "--cov-report=term-missing:skip-covered",
  "--cov-fail-under=75",
]

[tool.coverage.run]
branch = false
source = ["src/vidasync_multiagents_ia"]

[tool.coverage.report]
exclude_also = [
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["knowledge", "scripts"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
]
ignore = [
  "E501",  # line length enforced loosely
]
